Changes for Perl extension Module-Install

        - if configure_requires has ExtUtils::MakeMaker and it's version
          requires perl 5.6, require perl 5.6 for dist in META.yml (CHORNY)
        - Fixes to Module/AutoInstall.pm: (MSTROUT)
          - don't prompt for required dependencies under CPAN/CPANPLUS
          - allow PERL_AUTOINSTALL_PREFER_CPAN env var to disable cpanp use

0.81 Tue 24 Mar 2009 - Adam Kennedy
	- Use 3-argument open when Perl >= 5.006 (ADAMK)
        - Support for 'keywords' key in META.yml (CHORNY)
        - More URLs for licenses, test for this (CHORNY)
        - tests for extracting link to bugtracker,
          will more correctly extract them (CHORNY)
	- Adding version-normalising Module::Install::_cmp
	  (for <=> equivalent on versions) (ADAMK)
	- If the Makefile.PL time is in the future by only a few seconds
	  (probably due to 2-second filesystem time rounding on Win32)
	  sleep for 5 seconds to avoid the problem. (ADAMK)
	- Moving from Module::Install::DSL to inc::Module::Install::DSL
	  (to reduce the Makefile.PL header for DSL mode to one line) (ADAMK)
	- Adding convenience pod reading Module::Install::_readpod (ADAMK)
	- Adding convenience pod stripping Module::Install::_readperl (ADAMK)
	- Adding experimental requires_from command to auto-detect requires (ADAMK)
	- Add a "Writing MYMETA.yml" status message (ADAMK)
	- Generalising boolean commands (ADAMK)
	- Cleaner removal of files during realclean (ADAMK)
	- Write META.yml and MYMETA.yml after Makefile to pick up a couple
	  of extra implicit dependencies. (ADAMK)
	- Set a high configure_requires on ExtUtils::MakeMaker for any client
	  that supports configure_requires. (ADAMK)
	- Add a full resolution test for Module::Install::DSL (ADAMK)
	- If we write MYMETA.yml, remove it at realclean time (ADAMK)
	- Removed the 'Removing META.yml' warning

0.80 Tue 17 Mar 2009 - Adam Kennedy
	- Don't generate MYMETA.yml if we don't have YAML::Tiny, even if