@@ -5,6 +5,10 @@ Changes for Perl extension Module-Install
         - Fixes to Module/AutoInstall.pm: (MSTROUT)
           - don't prompt for required dependencies under CPAN/CPANPLUS
           - allow PERL_AUTOINSTALL_PREFER_CPAN env var to disable cpanp use
+	- non-default entries in @INC during Makefile.PL are replicated
+	  in Makefile (including 'inc').  E.g. "perl -Ifoo Makefile.PL",
+	  "make test" will ensure "foo" is added to @INC during testing)
+	  (DAGOLDEN)
 
 0.81 Tue 24 Mar 2009 - Adam Kennedy
 	- Use 3-argument open when Perl >= 5.006 (ADAMK)
